name:                anatomy
version:             0.1
synopsis:            Anatomy: Atomo documentation system
homepage:            http://darcsden.com/alex/anatomy
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
category:            Development
build-type:          Simple

cabal-version:       >= 1.2

data-files:          lib/anatomy.css
                     lib/*.atomo


library
  hs-source-dirs:    src

  build-depends:
    atomo,
    base >= 4,
    containers,
    directory,
    filepath,
    hashable,
    haskeline,
    monads-fd,
    parsec >= 3.0.0,
    pretty,
    pretty-show,
    tagsoup,
    time,
    vector

  exposed-modules:
    Anatomy.AutoFlow,
    Anatomy.Builder,
    Anatomy.Debug,
    Anatomy.Parser,
    Anatomy.Types,
    Paths_anatomy


executable anatomy
  hs-source-dirs:     src
  main-is:            Main.hs
  
  ghc-prof-options:   -prof -auto-all -caf-all
  ghc-options:        -O2 -Wall -threaded -fno-warn-unused-do-bind

  build-depends:
    atomo,
    base >= 4,
    containers,
    directory,
    filepath,
    hashable,
    haskeline,
    monads-fd,
    parsec >= 3.0.0,
    pretty,
    pretty-show,
    tagsoup >= 0.12,
    time,
    vector
